scss/components/limit-box.scss
.limit-box {
  width: $limit-box-width;
  min-width: $limit-box-width;

  border: $default-border;
  border-radius: $border-radius;
}

.limit-box-numbers {
  label.form-control-label, .input-field input:valid + label {
    color: $dark-medium-grey;
  }
}

.limit-box-usage, .limit-box-limit {
  width: 50%;
}

.limit-box-usage-value {
  display: block;
  width: 100%;
  height: $input-height;
  padding: $input-padding;

  font-size: $input-font-size;
}

.limit-box-footer {
  width: 100%;
  height: $limit-progress-bar-height;

  background-color: $light-grey;
}

.limit-box-bar {
  height: 100%;

  background-color: $green;
}

@for $i from 0 through 100 {
  .limit-box-bar.progress-#{$i} {
    width: $i * 1%;

    @if $i >= 75 {
      background-color: $orange;
    }
    @if $i == 100 {
      background-color: $red;
    }
  }
}

.limit-box-bar.mod-green {
  background-color: $green;
}

.limit-box-bar.mod-orange {
  background-color: $orange;
}

.limit-box-bar.mod-red {
  background-color: $red;
}

.limit-history-button {
  cursor: pointer;
}

